Fixed issue with breadcrumb navigation visibility.
Added sitemap attribute to enable auto-id generation for section
headings.

--- a/template-src/scss/main/_nav-main.scss
+++ b/template-src/scss/main/_nav-main.scss
@@ -51,7 +51,7 @@
 
             > a {
                 bottom: 0;
-                color: $nav-text;
+                color: $nav-text-mobile;
                 line-height: $nav-mobile-line-height;
                 padding: $nav-mobile-line-padding $nav-mobile-indent-offset;
                 border-bottom: $nav-mobile-border;
